examples/multi-tls/ingress-multi-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  tls:
  - hosts:
    - foo.bar
    secretName: foobar-ssl
  - hosts:
    - bar.foo
    secretName: barfoo-ssl
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: back-svc1
            port:
              number: 8080
  - host: bar.foo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: back-svc2
            port:
              number: 8080
